--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.3.5"
+    "@astrojs/check": "^0.5.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.3.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
